samples/_failures_safe/1761441552_eeed12_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dbe07934.c: In function ‘main’:
./samples/SAFE/__tmp_dbe07934.c:180:12: error: missing terminating " character
  180 |     printf("Result: %
      |            ^~~~~~~~~~
./samples/SAFE/__tmp_dbe07934.c:180:5: error: expected expression at end of input
  180 |     printf("Result: %
      |     ^~~~~~
./samples/SAFE/__tmp_dbe07934.c:180:5: error: expected declaration or statement at end of input
